compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/PrivateInTrait.java
public abstract interface PrivateInTrait /* PrivateInTrait*/ {
  private abstract java.lang.String getN();//  getN()

  private abstract java.lang.String getNn();//  getNn()

  private abstract void setNn(java.lang.String);//  setNn(java.lang.String)

  public static final class DefaultImpls /* PrivateInTrait.DefaultImpls*/ {
    private static final java.lang.String getN(@org.jetbrains.annotations.NotNull() PrivateInTrait);//  getN(PrivateInTrait)

    private static final java.lang.String getNn(@org.jetbrains.annotations.NotNull() PrivateInTrait);//  getNn(PrivateInTrait)

    private static final void setNn(@org.jetbrains.annotations.NotNull() PrivateInTrait, java.lang.String);//  setNn(PrivateInTrait, java.lang.String)
  }
}
